# event-driven-serverless-platform-demo

./: .gitignore  README.md
.kiro/specs/event-driven-serverless-platform-demo/: .config.kiro  design.md  requirements.md  tasks.md
docs/: ARCHITECTURE.md  DATA_CONTRACT.md  WALKTHROUGH.md
scripts/: build-lambda-packages.sh  deploy-amplify.sh  sync-processor-image.sh
services/ingest-sync/: pyproject.toml
services/ingest-sync/tests/: test_handler_unit.py  test_logic_property.py  test_logic_unit.py
services/query-api/: pyproject.toml
services/query-api/src/query_api/: __init__.py  handler.py
services/query-api/tests/: test_catalog_unit.py  test_handler_unit.py  test_logic_property.py  test_logic_unit.py
services/reprocess-api/: pyproject.toml
services/reprocess-api/src/reprocess_api/: __init__.py  handler.py  logic.py
services/reprocess-api/tests/: test_handler_unit.py  test_logic_property.py  test_logic_unit.py
services/shared/: processor_parameters.py
terraform/: .terraform.lock.hcl  amplify_deploy.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/.build/: .lambda-source-hash
terraform/modules/ingest/: lambda.tf  outputs.tf  s3.tf  variables.tf
terraform/modules/ingest-scheduler/: outputs.tf  scheduler.tf  variables.tf
terraform/modules/observability/: alarms_ingest.tf  alarms_presentation.tf  alarms_processing.tf  dashboard.tf  outputs.tf  sns.tf  variables.tf
terraform/modules/presentation/: amplify.tf  outputs.tf  (+4 more)
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: App.test.tsx  App.tsx  index.css
(+26 files in other folders)
