[project]
name = "query-api"
version = "0.1.0"
description = "Query API Lambda logic for event-driven platform demo."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
